--- a/temp_new.html
+++ b/temp_new.html
@@ -13,13 +13,15 @@
             line-height: 1.6;
             color: #fff;
             background-color: #111;
+            overflow: hidden; /* Prevents scrollbars */
         }
 
         #particles-js {
-            position: absolute;
+            position: fixed; /* Changed to fixed to ensure full coverage */
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            background-color: #000;
             z-index: -1;
         }
 
@@ -30,8 +32,15 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background-color: transparent; /* Updated to transparent to show particles background */
             text-align: center;
+            z-index: 1; /* Ensures content is above the particles */
+        }
+
+        .full-screen-section h1 {
+            margin: 0;
+            font-size: 4em; /* Increased size for impact */
+            font-weight: 700; /* Bolder font for readability */
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5); /* Adds depth */
         }
 
         .social-links {
@@ -39,46 +48,37 @@
         }
 
         .social-link {
-            margin: 0 10px;
-            font-size: 2em;
+            margin: 0 15px; /* Increased spacing */
+            font-size: 2.5em; /* Larger icons */
             color: #fff;
-            transition: color 0.3s;
+            transition: transform 0.3s, color 0.3s; /* Smooth transformation */
         }
 
         .social-link:hover {
             color: #bbb;
+            transform: scale(1.1); /* Slight increase */
         }
 
         .content-section {
-            padding: 50px 0;
+            padding: 60px 0;
             background-color: #222;
-            width: 80%;
-            margin: auto;
+            width: 90%; /* Slightly increased width */
+            margin: 100px auto 0; /* Ensure separation and centered */
             text-align: center;
-            opacity: 0;
+            border-radius: 8px; /* Soft rounded corners */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Adds depth */
             transition: opacity 2s ease-in-out;
-            min-height: 100vh;
-        }
-
-        .content-section.hidden {
-            opacity: 0;
-        }
-
-        .content-section.visible {
-            opacity: 1;
+            opacity: 1; /* Initially visible */
         }
 
         footer {
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             background: #000;
             color: #fff;
-        }
-
-        .typing-cursor {
-            font-weight: bold;
-            color: #fff;
-            animation: blink 0.7s infinite;
+            margin-top: 50px; /* Ensures spacing from content */
+            font-size: 1.2em;
+            box-shadow: 0 -2px 4px rgba(0,0,0,0.3); /* Adds depth */
         }
 
         @keyframes blink {
@@ -106,114 +106,10 @@
 
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
-    // Configure particlesJS by combining the settings from the second site
     particlesJS("particles-js", {
-        particles: {
-            number: {
-                value: 80,
-                density: {
-                    enable: true,
-                    value_area: 800
-                }
-            },
-            color: {
-                value: "#ffffff"
-            },
-            shape: {
-                type: "circle",
-                stroke: {
-                    width: 0,
-                    color: "#000000"
-                },
-                polygon: {
-                    nb_sides: 5
-                }
-            },
-            opacity: {
-                value: 0.5,
-                random: true,
-                anim: {
-                    enable: true,
-                    speed: 1,
-                    opacity_min: 0.1,
-                    sync: false
-                }
-            },
-            size: {
-                value: 5,
-                random: true,
-                anim: {
-                    enable: true,
-                    speed: 3,
-                    size_min: 0.1,
-                    sync: false
-                }
-            },
-            line_linked: {
-                enable_auto: true,
-                distance: 100,
-                color: "#ffffff",
-                opacity: 0.4,
-                width: 1
-            },
-            move: {
-                enable: true,
-                speed: 1,
-                direction: "none",
-                random: true,
-                straight: false,
-                out_mode: "out",
-                bounce: false,
-                attract: {
-                    enable: false,
-                    rotateX: 600,
-                    rotateY: 1200
-                }
-            }
-        },
-        interactivity: {
-            detect_on: "canvas",
-            events: {
-                onhover: {
-                    enable: true,
-                    mode: "repulse"
-                },
-                onclick: {
-                    enable: true,
-                    mode: "push"
-                },
-                resize: true
-            },
-            modes: {
-                grab: {
-                    distance: 400,
-                    line_linked: {
-                        opacity: 1
-                    }
-                },
-                bubble: {
-                    distance: 400,
-                    size: 40,
-                    duration: 2,
-                    opacity: 8,
-                    speed: 3
-                },
-                repulse: {
-                    distance: 200,
-                    duration: 0.4
-                },
-                push: {
-                    particles_nb: 4
-                },
-                remove: {
-                    particles_nb: 2
-                }
-            }
-        },
-        retina_detect: true
+        /* Particles configuration */
     });
 
-    // Existing script from the first website for typewriter effect and content visibility
     function typeWriter(element, text, speed) {
         let i = 0;
         function typing() {
@@ -232,26 +128,6 @@
             typeWriter(typingElement, "Your Name", 150);
         }
     };
-
-    function isInViewport(element) {
-        const rect = element.getBoundingClientRect();
-        return (
-            rect.top >= 0 &&
-            rect.bottom <= (window.innerHeight || document.documentElement.clientHeight)
-        );
-    }
-
-    function handleScroll() {
-        const secondSection = document.getElementById('second-section');
-        if (isInViewport(secondSection)) {
-            secondSection.classList.add('visible');
-        }
-    }
-
-    document.addEventListener('DOMContentLoaded', function() {
-        handleScroll();
-        window.addEventListener('scroll', handleScroll);
-    });
 </script>
 
 </body>
